# cedolini_web

./: .gitignore  COMANDI_AUTOBOTTE_FRECCE_A3.pptx  COMANDI_AUTOBOTTE_FRECCE_A3_REVISIONE.pptx  COMANDI_AUTOBOTTE_GUIDA_RAPIDA.pptx  COMANDI_AUTOBOTTE_GUIDA_RAPIDA_A3.pptx  Procfile  avvia_san_vincenzo_cud.bat  avvia_turni_planner.bat  build.sh  create_admin.py  db.sqlite3  et --hard c1fc3c8  render.yaml  requirements.txt  test_invio.py  verify_python.py
CargoFlow AI/: .gitignore  README.md  package-lock.json  package.json
CargoFlow AI/apps/backend/: README.md  alembic.ini  alembic_test.db  cargoflow.db  pyproject.toml
CargoFlow AI/apps/backend/alembic/: env.py
CargoFlow AI/apps/backend/alembic/versions/: 0001_initial_schema.py
CargoFlow AI/apps/backend/app/: __init__.py  main.py
CargoFlow AI/apps/backend/app/api/: router.py
CargoFlow AI/apps/backend/app/api/routes/: auctions.py  auth.py  dashboard.py  domain.py  health.py  loads.py
CargoFlow AI/apps/backend/app/core/: config.py  security.py
CargoFlow AI/apps/backend/app/db/: __init__.py  session.py
CargoFlow AI/apps/backend/app/models/: domain.py
CargoFlow AI/apps/backend/app/schemas/: auction.py  auth.py  dashboard.py  domain.py  load.py
CargoFlow AI/apps/backend/app/services/: __init__.py  auth.py
config/: .env  asgi.py  settings.py  urls.py  wsgi.py
gestionalepreventivi/: README.md  app.py  build_windows.ps1  requirements.txt
portal/: access.py  admin.py  apps.py  auth_backends.py  context_processors.py  forms.py  models.py  signals.py  storage_backends.py  tests.py  urls.py  utils_import.py  (+1 more)
(+180 files in other folders)
